# radargram_hyperbola_benchmark

./: README.md  evaluate.py  inference_frontend.ipynb  predict.py  pyproject.toml  requirements.txt  train.py  training_history_comparison.ipynb
configs/: dinov3.yaml  mask2former.yaml  mask_rcnn.yaml  sam2.yaml  segformer.yaml  unet.yaml  unetpp.yaml  yolo11_seg.yaml
scripts/: check_dataset.py  create_splits.py  evaluate_sam2_prompted.py  export_coco.py  export_sam2_finetune_data.py  export_yolo11_seg.py  predict_sam2_prompted.py  prepare_dataset.py  preview_augmentations.py
src/radarseg/: __init__.py  config.py
src/radarseg/data/: collate.py  dataset.py  transforms.py
src/radarseg/engine/: evaluator.py  losses.py  trainer.py
src/radarseg/models/: dinov3_segmenter.py  factory.py  mask2former.py  mask_rcnn.py  segformer.py  unet.py  unetpp.py
src/radarseg/postprocessing/: clean_masks.py  semantic_to_instances.py
src/radarseg/utils/: checkpoint.py  coordinates.py  io.py  masks.py  prediction_io.py  seed.py  visualization.py
